[project]
name = "mcp-autonomous-traders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.35.0",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "polygon-api-client>=1.14.6",
    "python-dotenv>=1.1.1",
]
